--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@dagrejs/dagre": "^1.1.4",
     "@popperjs/core": "^2.11.8",
     "@xyflow/react": "^12.4.4",
+    "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
